# general-storage

./: Cargo.toml  README.md  shell.nix  test.sh
.github/workflows/: test.yml
examples/fib/fib/: Cargo.toml
examples/fib/fib/src/: lib.rs
examples/fib/file/: Cargo.toml
examples/fib/file/src/: main.rs
examples/fib/web/: Cargo.toml
examples/fib/web/src/: lib.rs
file/: Cargo.toml  README.md
file/src/: lib.rs
static/: Cargo.toml  README.md
static/src/: lib.rs
storage/: Cargo.toml  README.md
storage/src/: format.rs  lib.rs
web/: Cargo.toml  README.md
web/src/: lib.rs
