[package]
name = "general_storage_static"
description = "Implementation of general_storage::Storage where backend is chosen statically by a feature"
version = "0.1.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/general-storage.git"
repository = "https://github.com/stevebob/general-storage.git"
documentation = "https://docs.rs/general_storage_static"
edition = "2018"

[features]
file = ["general_storage_file"]
web = ["general_storage_web"]
yaml = ["general_storage/yaml"]
json = ["general_storage/json"]
toml = ["general_storage/toml"]
bincode = ["general_storage/bincode"]
compress = ["general_storage/compress"]

[dependencies]
general_storage = { path = "../storage", version = "0.1" }
general_storage_file = { path = "../file", version = "0.1", optional = true }
general_storage_web = { path = "../web", version = "0.1", optional = true }
